--- a/blog-server/src/main/resources/application.yaml
+++ b/blog-server/src/main/resources/application.yaml
@@ -1,5 +1,4 @@
-server.port:
-  8080
+server.port: 8080
 spring:
   application:
     name: 未月拾叁
@@ -12,24 +11,24 @@ spring:
   task:
     execution:
       pool:
-        core-size: 10          # 核心线程数
-        max-size: 50           # 最大线程数
-        queue-capacity: 2500    # 队列容量
-        keep-alive: 10s        # 线程空闲时间
-      thread-name-prefix: AsyncExecutor-  # 线程名称前缀
+        core-size: 10 # 核心线程数
+        max-size: 50 # 最大线程数
+        queue-capacity: 2500 # 队列容量
+        keep-alive: 10s # 线程空闲时间
+      thread-name-prefix: AsyncExecutor- # 线程名称前缀
 
   jackson:
-      default-property-inclusion: non_null # JSON处理时忽略非空字段
+    default-property-inclusion: non_null # JSON处理时忽略非空字段
   data:
     redis:
-        host: 127.0.0.1
-        port: 6379
-        lettuce:
-          pool:
-            max-active: 10
-            max-idle: 10
-            min-idle: 1
-            time-between-eviction-runs: 10s
+      host: 127.0.0.1
+      port: 6379
+      lettuce:
+        pool:
+          max-active: 10
+          max-idle: 10
+          min-idle: 1
+          time-between-eviction-runs: 10s
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
@@ -39,4 +38,5 @@ config:
     redisDeleteDelay: 100
   ipXbd:
     path: D:\IdeaProjects\blog\blog-server\ip2region.xdb
-
+  log:
+    path: D:\app2024-07-21.log
