--- a/blog-user/jsconfig.json
+++ b/blog-user/jsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
+    "target": "es6",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
   },
-  "exclude": ["node_modules",
-    "dist1"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
