--- a/blog-server/src/main/resources/application-online.yaml
+++ b/blog-server/src/main/resources/application-online.yaml
@@ -20,6 +20,7 @@ spring:
     redis:
       host: redis
       port: 6379
+      password: <PASSWORD>
       lettuce:
         pool:
           max-active: 10
@@ -36,3 +37,5 @@ config:
     path: /root/java/ipXbd/ip2region.xdb
   log:
     path: /root/java/nohup.out
+  global:
+    env: online
