--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -26,7 +26,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-
+        <!-- Spring Boot Test Dependencies -->
+        <dependency>
+            <groupId> org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
 
         <!-- Lombok -->
         <dependency>
@@ -77,7 +81,6 @@
             <version>5.8.25</version>
         </dependency>
 
-
         <!-- Spring AOP -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -98,6 +101,20 @@
             <version>1.15.0</version>
         </dependency>
 
+
+        <!-- JUnit -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Bloom Filter -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.0.0-android</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>bili</finalName>
