--- a/blog-server/src/main/resources/application-online.yaml
+++ b/blog-server/src/main/resources/application-online.yaml
@@ -7,15 +7,6 @@ spring:
     username: root
     password: Blog@123
     driver-class-name: com.mysql.cj.jdbc.Driver
-
-  task:
-    execution:
-      pool:
-        core-size: 4 # 核心线程数
-        max-size: 8 # 最大线程数
-        queue-capacity: 500 # 队列容量
-        keep-alive: 10s # 线程空闲时间
-      thread-name-prefix: AsyncExecutor- # 线程名称前缀
   data:
     redis:
       host: redis
@@ -41,3 +32,5 @@ config:
     env: online
     index-name: 未月拾叁
     index-url: https://www.tsukiyo.cn
+  jwt:
+    secret: dsfsadawdasdasdaasd
