--- a/blog-server/src/main/resources/application.yaml
+++ b/blog-server/src/main/resources/application.yaml
@@ -7,29 +7,14 @@ spring:
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
-
-  task:
-    execution:
-      pool:
-        core-size: 10 # 核心线程数
-        max-size: 50 # 最大线程数
-        queue-capacity: 2500 # 队列容量
-        keep-alive: 10s # 线程空闲时间
-      thread-name-prefix: AsyncExecutor- # 线程名称前缀
-
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
   data:
     redis:
-      host: 1.94.145.164
-      port: 8888
-      password: "Redis134771150"
-      lettuce:
-        pool:
-          max-active: 10
-          max-idle: 10
-          min-idle: 1
-          time-between-eviction-runs: 10s
+      host: 111.230.11.195
+      port: 6379
+      password: 123456
+
 # mybatis-plus:
 #   configuration:
 #     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
@@ -47,4 +32,6 @@ config:
     env: dev
     index-name: 未月拾叁
     index-url: https://www.tsukiyo.cn
+  jwt:
+    secret: dsfsadawdasdasdaasd
 
