--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -120,6 +120,11 @@
             <version>32.0.0-android</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>bili</finalName>
