--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -120,9 +120,22 @@
             <version>32.0.0-android</version>
         </dependency>
 
+        <!-- RabbitMQ -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
+
+        <dependency>
+            <groupId>am.ik.webhook</groupId>
+            <artifactId>webhook-verifier</artifactId>
+            <version>0.1.2</version>
         </dependency>
 
     </dependencies>
