--- a/blog-server/pom.xml
+++ b/blog-server/pom.xml
@@ -138,6 +138,18 @@
             <version>0.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <!-- HttpClient for HTTP requests -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>bili</finalName>
