--- a/blog-user/package.json
+++ b/blog-user/package.json
@@ -23,6 +23,7 @@
     "md-editor-v3": "^4.15.6",
     "prismjs": "^1.29.0",
     "store": "^2.0.12",
+    "test111vue": "file:",
     "viewerjs": "^1.11.6",
     "vite-plugin-proxy": "^0.5.0",
     "vue": "^3.4.21",
